added rebound, first sounds, racket control

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,14 +3,24 @@ body {
   background-color: #333333;
   text-align: center;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  overflow: hidden; /* Hide scrollbars */
 }
 
 h1 {
   color: white;
+  font-size: 7vw;
+}
+
+h1 span {
+  color: gray;
 }
 
 p {
   color: lightgrey;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: lighter;
 }
 
 #racket {
@@ -27,10 +37,22 @@ p {
   position: absolute;
   background-color: white;
   top: 50vh;
-  left: 50vw;
-  transform: translateY(-50%);
-  transform: translateX(-50%);
+  left: 10vw;
+  /*transform: translateX(-50%);
+  transform: translateY(-50%);*/
   width: 2vh;
   height: 2vh;
   border-radius: 50%;
+  background-color: red;
+}
+
+#start-button {
+  width: 200px;
+  height: 50px;
+  font-size: large;
+  background-color: red;
+  border-style: none;
+  border-radius: 1vw;
+  margin-top: 5vh;
+  color: white;
 }
