--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body {
 
 h1 {
   color: white;
-  font-size: 7vw;
+  font-size: 6vw;
 }
 
 h1 span {
@@ -20,8 +20,9 @@ h1 span {
 }
 
 p {
+  margin-top: 25px;
   color: lightgrey;
-  width: 60%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   font-weight: lighter;
@@ -33,14 +34,9 @@ p {
   display: none;
 }
 
-#win {
+#game-win {
   margin-top: 100px;
-
   display: none;
-}
-
-#win h1 {
-  color: red;
 }
 
 #retry {
@@ -93,6 +89,17 @@ p {
 }
 
 #start-button {
+  width: 200px;
+  height: 50px;
+  font-size: large;
+  background-color: red;
+  border-style: none;
+  border-radius: 1vw;
+  margin-top: 5vh;
+  color: white;
+}
+
+#refresh-button {
   width: 200px;
   height: 50px;
   font-size: large;
